--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,12 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
+		"paths": {
+			"$lib": ["./src/frontend/src/lib"],
+			"$lib/*": ["./src/frontend/src/lib/*"],
+			"$declarations": ["./src/declarations"],
+			"$declarations/*": ["./src/declarations/*"]
+		}
 	}
-	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
-	//
-	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
-	// from the referenced tsconfig.json - TypeScript does not merge them in
 }
