--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"prettier": "^2.8.0",
+		"prettier-plugin-organize-imports": "^3.2.3",
 		"prettier-plugin-svelte": "^2.10.1",
 		"sass": "^1.64.2",
 		"svelte": "^4.0.5",
