--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 		"@dfinity/candid": "^0.18.1",
 		"@dfinity/principal": "^0.18.1",
 		"@dfinity/utils": "^0.0.19",
-		"buffer": "^6.0.3"
+		"@ethersproject/providers": "^5.7.2",
+		"buffer": "^6.0.3",
+		"ethers": "^5.7.2"
 	},
 	"devDependencies": {
 		"@esbuild-plugins/node-modules-polyfill": "^0.2.2",
