--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -10,11 +10,11 @@ crate-type = ["cdylib"]
 
 [dependencies]
 candid = "0.9.3"
+ethers-core = "2"
 ic-cdk = "0.10.0"
 ic-cdk-macros = "0.7.1"
 ic-cdk-timers = "0.4"
 serde = "1"
-tiny-keccak = { version = "2", features = ["keccak"] }
 k256 = "0.13"
 hex = "0.4"
 getrandom = { version = "0.2", features = ["custom"] }
