--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -15,6 +15,7 @@ ic-cdk = "0.10.0"
 ic-cdk-macros = "0.7.1"
 ic-cdk-timers = "0.4"
 serde = "1"
+sha3 = "0.10"
 k256 = "0.13"
 hex = "0.4"
 getrandom = { version = "0.2", features = ["custom"] }
