--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@dfinity/agent": "^0.18.1",
 		"@dfinity/auth-client": "^0.18.1",
 		"@dfinity/candid": "^0.18.1",
+		"@dfinity/gix-components": "^2.6.0",
 		"@dfinity/principal": "^0.18.1",
 		"@dfinity/utils": "^0.0.19",
 		"alchemy-sdk": "^2.9.2",
@@ -44,8 +45,8 @@
 		"prettier-plugin-organize-imports": "^3.2.3",
 		"prettier-plugin-svelte": "^2.10.1",
 		"sass": "^1.64.2",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
+		"svelte": "^3.59.1",
+		"svelte-check": "^3.4.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
