Address review feedback
- Removes font size increase from WC modal
- Renames TopUp to ReceiveMM to avoid confusion
- Separate metamask.service.ts that interacts with MM through json-rpc
- Use arrow functions everywhere
- State of button in ReceiveMM.svelte now correctly depends on 3
  variables
- Avoid console.log in favour of toast messages

--- a/env.sample
+++ b/env.sample
@@ -6,3 +6,4 @@ VITE_ALCHEMY_NETWORK=eth-sepolia
 VITE_ETHEREUM_NETWORK_ID=11155111
 VITE_ETHEREUM_SYMBOL=SepoliaETH
 VITE_WALLET_CONNECT_PROJECT_ID=
+VITE_METAMASK_DEEPLINK_URL=https://metamask.app.link/dapp/oisy.ic0.app
