--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@dfinity/gix-components": "^2.6.0",
 		"@dfinity/principal": "^0.19.2",
 		"@dfinity/utils": "^0.0.20",
+		"@metamask/detect-provider": "^2.0.0",
 		"@walletconnect/web3wallet": "^1.9.0",
 		"alchemy-sdk": "^2.9.2",
 		"buffer": "^6.0.3",
