--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,17 +4,6 @@ on:
   pull_request:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install dependencies
-        run: npm ci
-      - name: Build
-        run: npm run build
-
   lint:
     runs-on: ubuntu-latest
 
@@ -38,7 +27,7 @@ jobs:
         run: npm run check
 
   may-merge:
-    needs: ['check', 'lint', 'build']
+    needs: ['check', 'lint']
     runs-on: ubuntu-latest
     steps:
       - name: Cleared for merging
