--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test": "vitest",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
 		"prebuild": "npm run generate",
 		"generate": "scripts/did.sh && dfx generate && node scripts/update.types.mjs && npm run format",
 		"deploy": "scripts/deploy.sh"
@@ -29,7 +29,7 @@
 		"@dfinity/utils": "^0.0.20",
 		"@metamask/detect-provider": "^2.0.0",
 		"@walletconnect/web3wallet": "^1.9.1",
-		"alchemy-sdk": "^2.9.2",
+		"alchemy-sdk": "^2.10.1",
 		"buffer": "^6.0.3",
 		"ethers": "^5.7.0",
 		"the-new-css-reset": "^1.9.0"
@@ -41,20 +41,20 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.28.0",
+		"autoprefixer": "^10.4.15",
+		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"prettier": "^2.8.0",
+		"eslint-plugin-svelte": "^2.33.1",
+		"prettier": "^3.0.3",
 		"prettier-plugin-organize-imports": "^3.2.3",
-		"prettier-plugin-svelte": "^2.10.1",
-		"sass": "^1.64.2",
+		"prettier-plugin-svelte": "^3.0.3",
+		"sass": "^1.67.0",
 		"svelte": "^3.59.1",
 		"svelte-check": "^3.4.5",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
-		"vitest": "^0.33.0"
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.9",
+		"vitest": "^0.34.4"
 	},
 	"type": "module"
 }
