--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,6 @@ VITE_ETHEREUM_NETWORK_ID=11155111
 VITE_ETHEREUM_SYMBOL=SepoliaETH
 VITE_WALLET_CONNECT_PROJECT_ID=
 VITE_OISY_NAME=Oisy
-VITE_OISY_DESCIRPTION="An Ethereum demo wallet hosted on the IC"
+VITE_OISY_DESCRIPTION="An Ethereum demo wallet hosted on the IC"
 VITE_OISY_URL=https://oisy.com
 VITE_OISY_ICON=https://oisy.com/favicons/icon-512x512.png
