--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"build:compress": "./scripts/build.compress.sh",
 		"build:csp": "node scripts/build.csp.mjs",
-		"build:post-process": "npm run build:csp && npm run build:compress",
+		"build:metadata": "node scripts/build.metadata.mjs",
+		"build:post-process": "npm run build:metadata && npm run build:csp && npm run build:compress",
 		"dev": "vite dev",
 		"build": "tsc --noEmit && vite build && npm run build:post-process",
 		"build:staging": "tsc --noEmit && vite build --mode staging && npm run build:post-process",
@@ -43,6 +44,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.15",
+		"dotenv": "^16.3.1",
 		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.33.1",
