--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ VITE_ALCHEMY_JSON_RPC_URL=https://eth-sepolia.g.alchemy.com/v2
 VITE_ETHEREUM_NETWORK_ID=11155111
 VITE_ETHEREUM_SYMBOL=SepoliaETH
 VITE_WALLET_CONNECT_PROJECT_ID=
-VITE_OISY_NAME=Oisy
+VITE_OISY_NAME="Oisy wallet"
 VITE_OISY_DESCRIPTION="An Ethereum demo wallet hosted on the IC"
 VITE_OISY_URL=https://oisy.com
 VITE_OISY_ICON=https://oisy.com/favicons/icon-512x512.png
