--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ VITE_ALCHEMY_JSON_RPC_URL=https://eth-sepolia.g.alchemy.com/v2
 VITE_ETHEREUM_NETWORK_ID=11155111
 VITE_ETHEREUM_SYMBOL=SepoliaETH
 VITE_WALLET_CONNECT_PROJECT_ID=
-VITE_OISY_NAME="Oisy wallet"
+VITE_OISY_NAME="Oisy Wallet"
 VITE_OISY_ONELINER="A novel Ethereum wallet hosted on the Internet Computer"
 VITE_OISY_DESCRIPTION="Crafted for the Internet Computer, Oisy is a unique Ethereum wallet that operates directly within your browser. It is entirely on-chain and secured by chain-key cryptography and Internet Identity."
 VITE_OISY_URL=https://oisy.com
