--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ VITE_OISY_ONELINER="A novel Ethereum wallet hosted on the Internet Computer"
 VITE_OISY_DESCRIPTION="Crafted for the Internet Computer, Oisy is a unique Ethereum wallet that operates directly within your browser. It is entirely on-chain and secured by chain-key cryptography and Internet Identity."
 VITE_OISY_URL=https://oisy.com
 VITE_OISY_ICON=https://oisy.com/favicons/icon-512x512.png
+VITE_AIRDROP=false
