build(frontend): move Etherscan calls to Infura (except fetching transactions history) (#249)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 VITE_ETHERSCAN_API_URL=https://api-sepolia.etherscan.io/api
 VITE_ETHERSCAN_API_KEY=
 VITE_ETHERSCAN_NETWORK=sepolia
+VITE_INFURA_API_KEY=
+VITE_INFURA_NETWORK=sepolia
 VITE_ALCHEMY_API_KEY=
 VITE_ALCHEMY_NETWORK=eth-sepolia
 VITE_ALCHEMY_JSON_RPC_URL=https://eth-sepolia.g.alchemy.com/v2
