--- a/src/airdrop/Cargo.toml
+++ b/src/airdrop/Cargo.toml
@@ -18,3 +18,4 @@ ic-metrics-encoder = "1.1.0"
 serde_bytes = "0.11"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
+getrandom = { version = "0.2", features = ["js"] }
