--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,4 @@ VITE_OISY_DESCRIPTION="Crafted for the Internet Computer, Oisy is a unique Ether
 VITE_OISY_URL=https://oisy.com
 VITE_OISY_ICON=https://oisy.com/favicons/icon-512x512.png
 VITE_AIRDROP=false
+VITE_ERC20_ICP_SYMBOL=ckICP
