--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,4 @@ VITE_OISY_ICON=https://oisy.com/favicons/icon-512x512.png
 VITE_OISY_REPO_URL=https://github.com/dfinity/oisy-wallet
 VITE_AIRDROP=false
 VITE_ERC20_ICP_SYMBOL=ckICP
+VITE_ERC20_ICP_REPO_URL=https://github.com/dfinity/erc20-icp
