--- a/src/airdrop/Cargo.toml
+++ b/src/airdrop/Cargo.toml
@@ -16,3 +16,7 @@ ic-cdk-timers = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 ic-metrics-encoder = "1.1.0"
 serde_bytes = "0.11"
+
+[dev-dependencies]
+rand = "0.8.5"
+tokio = { version = "1.32.0", features = ["full"] }
