--- a/src/shared/Cargo.toml
+++ b/src/shared/Cargo.toml
@@ -1,24 +1,15 @@
 [package]
-name = "backend"
+name = "shared"
 version = "0.0.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-crate-type = ["cdylib"]
-
 [dependencies]
 candid = "0.9.3"
-ethers-core = "2"
-futures = "0.3"
 ic-cdk = "0.10.0"
 ic-cdk-macros = "0.7.1"
 ic-cdk-timers = "0.4"
 serde = "1"
-k256 = "0.13"
-hex = "0.4"
-getrandom = { version = "0.2", features = ["custom"] }
 ic-metrics-encoder = "1.1.0"
 serde_bytes = "0.11"
-shared = { path = "../shared" }
