--- a/src/airdrop/Cargo.toml
+++ b/src/airdrop/Cargo.toml
@@ -17,3 +17,4 @@ serde = { version = "1.0", features = ["derive"] }
 ic-metrics-encoder = "1.1.0"
 serde_bytes = "0.11"
 time = { version = "0.3.29", features =["formatting"] }
+shared = { path = "../shared" }
