--- a/src/airdrop/Cargo.toml
+++ b/src/airdrop/Cargo.toml
@@ -18,3 +18,6 @@ ic-metrics-encoder = "1.1.0"
 serde_bytes = "0.11"
 time = { version = "0.3.29", features =["formatting"] }
 shared = { path = "../shared" }
+
+[dev-dependencies]
+rand = "0.8.5"
