--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -9,12 +9,12 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.9.3"
+candid = "0.9.9"
 ethers-core = "2"
 futures = "0.3"
-ic-cdk = "0.10.0"
-ic-cdk-macros = "0.7.1"
-ic-cdk-timers = "0.4"
+ic-cdk = "0.11.3"
+ic-cdk-macros = "0.8.1"
+ic-stable-structures = "0.6.0"
 serde = "1"
 k256 = "0.13"
 hex = "0.4"
