--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"@dfinity/agent": "^0.19.2",
 		"@dfinity/auth-client": "^0.19.2",
 		"@dfinity/candid": "^0.19.2",
-		"@dfinity/gix-components": "^2.6.0",
+		"@dfinity/gix-components": "^3.0.0-next-2023-10-26",
 		"@dfinity/nns": "^0.16.7",
 		"@dfinity/principal": "^0.19.2",
 		"@dfinity/utils": "^0.0.22",
@@ -46,7 +46,7 @@
 		"@esbuild-plugins/node-modules-polyfill": "^0.2.2",
 		"@rollup/plugin-inject": "^5.0.3",
 		"@sveltejs/adapter-static": "^2.0.3",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/kit": "^1.27.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.15",
@@ -58,8 +58,8 @@
 		"prettier-plugin-organize-imports": "^3.2.3",
 		"prettier-plugin-svelte": "^3.0.3",
 		"sass": "^1.67.0",
-		"svelte": "^3.59.1",
-		"svelte-check": "^3.4.5",
+		"svelte": "^4.2.2",
+		"svelte-check": "^3.5.2",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"vite": "^4.4.9",
