build(fronted): bump most dependencies and replace nns with ledger-icp

--- a/package.json
+++ b/package.json
@@ -32,38 +32,38 @@
 		"@dfinity/auth-client": "^0.19.2",
 		"@dfinity/candid": "^0.19.2",
 		"@dfinity/gix-components": "^3.0.0-next-2023-10-26",
-		"@dfinity/nns": "^0.16.7",
+		"@dfinity/ledger-icp": "^1.0.0",
 		"@dfinity/principal": "^0.19.2",
-		"@dfinity/utils": "^0.0.22",
+		"@dfinity/utils": "^1.0.0",
 		"@metamask/detect-provider": "^2.0.0",
-		"@walletconnect/web3wallet": "^1.9.1",
+		"@walletconnect/web3wallet": "^1.9.3",
 		"alchemy-sdk": "^2.10.1",
 		"buffer": "^6.0.3",
 		"ethers": "^5.7.0",
-		"the-new-css-reset": "^1.9.0"
+		"the-new-css-reset": "^1.11.1"
 	},
 	"devDependencies": {
 		"@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-		"@rollup/plugin-inject": "^5.0.3",
+		"@rollup/plugin-inject": "^5.0.5",
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.27.1",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.15",
+		"@typescript-eslint/eslint-plugin": "^6.9.0",
+		"@typescript-eslint/parser": "^6.9.0",
+		"autoprefixer": "^10.4.16",
 		"dotenv": "^16.3.1",
-		"eslint": "^8.49.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.33.1",
+		"eslint": "^8.52.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-svelte": "^2.34.0",
 		"prettier": "^3.0.3",
 		"prettier-plugin-organize-imports": "^3.2.3",
 		"prettier-plugin-svelte": "^3.0.3",
-		"sass": "^1.67.0",
+		"sass": "^1.69.5",
 		"svelte": "^4.2.2",
 		"svelte-check": "^3.5.2",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
-		"vite": "^4.4.9",
-		"vitest": "^0.34.4"
+		"vite": "^4.5.0",
+		"vitest": "^0.34.6"
 	},
 	"type": "module"
 }
