--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ VITE_OISY_DESCRIPTION="Crafted for the Internet Computer, Oisy is a unique Ether
 VITE_OISY_URL=https://oisy.com
 VITE_OISY_ICON=https://oisy.com/favicons/icon-512x512.png
 VITE_OISY_REPO_URL=https://github.com/dfinity/oisy-wallet
+VITE_OISY_ALPHA_WARNING_URL="https://github.com/dfinity/oisy-wallet#status"
 VITE_AIRDROP=false
 VITE_AIRDROP_COMPLETED=false
 VITE_ERC20_ICP_SYMBOL=ckICP
