--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,2 @@
-* @dfinity/gix
+# The codebase is owned by the Governance & Identity Experience team at DFINITY
+# For questions, reach out to: <gix@dfinity.org>
