build: add coingeck api url to env example

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,4 @@ VITE_AIRDROP=false
 VITE_AIRDROP_COMPLETED=false
 VITE_ERC20_ICP_SYMBOL=ckICP
 VITE_ERC20_ICP_REPO_URL=https://github.com/dfinity/erc20-icp
+VITE_COINGECKO_API_URL=https://api.coingecko.com/api/v3
