build: deploy ICP ledger and index locally

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ internet_identity.wasm
 internet_identity.did
 
 codes.txt
+
+icp_ledger.did
+icp_ledger.wasm
+icp_ledger.wasm.gz
+icp_index.did
+icp_index.wasm
+icp_index.wasm.gz
