--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@dfinity/oisy-wallet",
-	"version": "0.0.4",
+	"version": "0.0.3",
 	"private": true,
 	"license": "Apache-2.0",
 	"repository": {
@@ -28,13 +28,13 @@
 		"deploy": "scripts/deploy.sh"
 	},
 	"dependencies": {
-		"@dfinity/agent": "^0.19.2",
-		"@dfinity/auth-client": "^0.19.2",
-		"@dfinity/candid": "^0.19.2",
+		"@dfinity/agent": "^0.20.2",
+		"@dfinity/auth-client": "^0.20.2",
+		"@dfinity/candid": "^0.20.2",
 		"@dfinity/gix-components": "^3.0.0-next-2023-10-26",
-		"@dfinity/ledger-icp": "^2.0.0",
-		"@dfinity/principal": "^0.19.2",
-		"@dfinity/utils": "^1.1.0",
+		"@dfinity/ledger-icp": "^2.0.0-next-2023-12-11.1",
+		"@dfinity/principal": "^0.20.2",
+		"@dfinity/utils": "^1.1.0-next-2023-12-11.1",
 		"@metamask/detect-provider": "^2.0.0",
 		"@walletconnect/web3wallet": "^1.9.1",
 		"alchemy-sdk": "^3.1.0",
