feat: view on explorer

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 VITE_ETHERSCAN_API_URL=https://api-sepolia.etherscan.io/api
 VITE_ETHERSCAN_API_KEY=
 VITE_ETHERSCAN_NETWORK=sepolia
+VITE_ETHERSCAN_EXPLORER_URL=https://sepolia.etherscan.io
 VITE_INFURA_API_KEY=
 VITE_INFURA_NETWORK=sepolia
 VITE_ALCHEMY_API_KEY=
