--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@dfinity/candid": "^0.20.2",
 		"@dfinity/gix-components": "^3.0.0-next-2023-10-26",
 		"@dfinity/ledger-icp": "^2.0.0-next-2023-12-19.4",
+		"@dfinity/ledger-icrc": "^2.0.0-next-2023-12-19.4",
 		"@dfinity/principal": "^0.20.2",
 		"@dfinity/utils": "^1.1.0-next-2023-12-19.4",
 		"@metamask/detect-provider": "^2.0.0",
