--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,4 @@ VITE_AIRDROP_COMPLETED=false
 VITE_ERC20_ICP_SYMBOL=ckICP
 VITE_ERC20_ICP_REPO_URL=https://github.com/dfinity/erc20-icp
 VITE_COINGECKO_API_URL=https://api.coingecko.com/api/v3
+VITE_ICP_DASHBOARD_EXPLORER_URL=https://dashboard.internetcomputer.org
