feat: ICP wallet (#499)

--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
 		"@dfinity/auth-client": "^0.20.2",
 		"@dfinity/candid": "^0.20.2",
 		"@dfinity/gix-components": "^3.0.0-next-2023-10-26",
-		"@dfinity/ledger-icp": "^2.0.0-next-2023-12-19.4",
+		"@dfinity/ledger-icp": "^2.1.0",
+		"@dfinity/ledger-icrc": "^2.1.0",
 		"@dfinity/principal": "^0.20.2",
-		"@dfinity/utils": "^1.1.0-next-2023-12-19.4",
+		"@dfinity/utils": "^2.0.0",
 		"@metamask/detect-provider": "^2.0.0",
 		"@walletconnect/web3wallet": "^1.9.1",
 		"alchemy-sdk": "^3.1.0",
