--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 	"devDependencies": {
 		"@esbuild-plugins/node-modules-polyfill": "^0.2.2",
 		"@rollup/plugin-inject": "^5.0.5",
+		"@types/node": "^20.10.5",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
 		"@typescript-eslint/parser": "^6.13.1",
 		"autoprefixer": "^10.4.16",
