--- a/package.json
+++ b/package.json
@@ -36,17 +36,21 @@
 		"@dfinity/principal": "^0.20.2",
 		"@dfinity/utils": "^2.0.0",
 		"@metamask/detect-provider": "^2.0.0",
+		"@sveltejs/adapter-static": "^3.0.1",
+		"@sveltejs/kit": "^2.0.4",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@walletconnect/web3wallet": "^1.9.1",
 		"alchemy-sdk": "^3.1.0",
 		"buffer": "^6.0.3",
 		"ethers": "^5.7.0",
-		"idb-keyval": "^6.2.1"
+		"idb-keyval": "^6.2.1",
+		"vite": "^5.0.10",
+		"vitest": "^1.1.0"
 	},
 	"devDependencies": {
 		"@esbuild-plugins/node-modules-polyfill": "^0.2.2",
 		"@rollup/plugin-inject": "^5.0.5",
-		"@sveltejs/adapter-static": "^2.0.3",
-		"@sveltejs/kit": "^1.27.6",
+		"@types/node": "^20.10.5",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
 		"@typescript-eslint/parser": "^6.13.1",
 		"autoprefixer": "^10.4.16",
@@ -63,9 +67,7 @@
 		"svelte-check": "^3.6.2",
 		"tailwindcss": "^3.3.7",
 		"tslib": "^2.6.2",
-		"typescript": "^5.2.2",
-		"vite": "^4.5.1",
-		"vitest": "^0.34.6"
+		"typescript": "^5.2.2"
 	},
 	"type": "module"
 }
