--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"@dfinity/agent": "^0.20.2",
 		"@dfinity/auth-client": "^0.20.2",
 		"@dfinity/candid": "^0.20.2",
-		"@dfinity/gix-components": "^3.0.0-next-2023-10-26",
+		"@dfinity/gix-components": "^3.0.0",
 		"@dfinity/ledger-icp": "^2.1.0",
 		"@dfinity/ledger-icrc": "^2.1.0",
 		"@dfinity/principal": "^0.20.2",
