build: download icp ledger and index to target

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # dfx temporary files
 .dfx/
 
-# rust
+# rust and downloaded wasm|did files
 target/
 
 # frontend code
@@ -31,10 +31,3 @@ internet_identity.wasm
 internet_identity.did
 
 codes.txt
-
-/icp_ledger.did
-icp_ledger.wasm
-icp_ledger.wasm.gz
-/icp_index.did
-icp_index.wasm
-icp_index.wasm.gz
