--- a/package.json
+++ b/package.json
@@ -43,12 +43,9 @@
 		"alchemy-sdk": "^3.1.0",
 		"buffer": "^6.0.3",
 		"ethers": "^5.7.0",
-		"idb-keyval": "^6.2.1",
-		"vite": "^5.0.10",
-		"vitest": "^1.1.0"
+		"idb-keyval": "^6.2.1"
 	},
 	"devDependencies": {
-		"@esbuild-plugins/node-modules-polyfill": "^0.2.2",
 		"@rollup/plugin-inject": "^5.0.5",
 		"@types/node": "^20.10.5",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
@@ -67,7 +64,9 @@
 		"svelte-check": "^3.6.2",
 		"tailwindcss": "^3.3.7",
 		"tslib": "^2.6.2",
-		"typescript": "^5.2.2"
+		"typescript": "^5.2.2",
+		"vite": "^5.0.11",
+		"vitest": "^1.1.3"
 	},
 	"type": "module"
 }
