--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@dfinity/agent": "^0.20.2",
 		"@dfinity/auth-client": "^0.20.2",
 		"@dfinity/candid": "^0.20.2",
+		"@dfinity/ckbtc": "^2.1.0",
 		"@dfinity/gix-components": "^3.1.0",
 		"@dfinity/ledger-icp": "^2.1.0",
 		"@dfinity/ledger-icrc": "^2.1.0-next-2024-01-08.1",
