--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,16 +4,6 @@ on:
   pull_request:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install dependencies
-        run: npm ci
-      - name: Build
-        run: npm run build
 
   lint:
     runs-on: ubuntu-latest
@@ -49,7 +39,7 @@ jobs:
         run: npm run test
 
   may-merge:
-    needs: ['build', 'check', 'lint', 'test']
+    needs: ['check', 'lint', 'test']
     runs-on: ubuntu-latest
     steps:
       - name: Cleared for merging
