--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
 
 jobs:
+
   lint:
     runs-on: ubuntu-latest
 
@@ -26,8 +27,19 @@ jobs:
       - name: Lint
         run: npm run check
 
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm ci
+      - name: Test
+        run: npm run test
+
   may-merge:
-    needs: ['check', 'lint']
+    needs: ['check', 'lint', 'test']
     runs-on: ubuntu-latest
     steps:
       - name: Cleared for merging
