refactor: move tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
 		"strict": true,
 		"types": ["node"]
 	},
-	"exclude": ["src/frontend/tests/**/*"]
+	"exclude": ["src/frontend/src/tests/**/*"]
 }
