--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@dfinity/auth-client": "^0.20.2",
 		"@dfinity/candid": "^0.20.2",
 		"@dfinity/ckbtc": "^2.1.0",
+		"@dfinity/cketh": "^0.0.1-next-2024-01-17",
 		"@dfinity/gix-components": "^4.0.0-next-2024-01-17.2",
 		"@dfinity/ledger-icp": "^2.1.1",
 		"@dfinity/ledger-icrc": "^2.1.0-next-2024-01-10.1",
