--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 		"alchemy-sdk": "^3.1.2",
 		"buffer": "^6.0.3",
 		"ethers": "^5.7.0",
-		"idb-keyval": "^6.2.1"
+		"idb-keyval": "^6.2.1",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@rollup/plugin-inject": "^5.0.5",
