feat: pending utxo block explorer link

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 VITE_ETHERSCAN_API_URL=https://api-sepolia.etherscan.io/api
 VITE_ETHERSCAN_API_KEY=
 VITE_ETHERSCAN_NETWORK=sepolia
-VITE_ETHEREUM_EXPLORER_URL=https://sepolia.etherscan.io
 VITE_INFURA_API_KEY=
 VITE_INFURA_NETWORK=sepolia
 VITE_ALCHEMY_API_KEY=
@@ -22,6 +21,8 @@ VITE_AIRDROP_COMPLETED=false
 VITE_ERC20_ICP_SYMBOL=ckICP
 VITE_ERC20_ICP_REPO_URL=https://github.com/dfinity/erc20-icp
 VITE_COINGECKO_API_URL=https://api.coingecko.com/api/v3
+VITE_ETHEREUM_EXPLORER_URL=https://sepolia.etherscan.io
+VITE_BITCOIN_EXPLORER_URL=https://blockstream.info/testnet
 VITE_DASHBOARD_EXPLORER_CKBTC_URL=https://dashboard.internetcomputer.org/bitcoin/transaction
 VITE_DASHBOARD_EXPLORER_CKETH_URL=https://dashboard.internetcomputer.org/ethereum/transaction
 VITE_BTC_NETWORK=testnet
