feat: more consistent ck explorer url env variables

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,6 @@ VITE_AIRDROP_COMPLETED=false
 VITE_ERC20_ICP_SYMBOL=ckICP
 VITE_ERC20_ICP_REPO_URL=https://github.com/dfinity/erc20-icp
 VITE_COINGECKO_API_URL=https://api.coingecko.com/api/v3
-VITE_DASHBOARD_EXPLORER_CKBTC_URL=https://dashboard.internetcomputer.org/bitcoin/transaction
-VITE_DASHBOARD_EXPLORER_CKETH_URL=https://dashboard.internetcomputer.org/ethereum/transaction
+VITE_CKBTC_EXPLORER_URL=https://dashboard.internetcomputer.org/bitcoin
+VITE_CKETH_EXPLORERURL=https://dashboard.internetcomputer.org/ethereum
 VITE_BTC_NETWORK=testnet
