--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
 		"@dfinity/agent": "^0.20.2",
 		"@dfinity/auth-client": "^0.20.2",
 		"@dfinity/candid": "^0.20.2",
-		"@dfinity/ckbtc": "^2.1.1",
-		"@dfinity/cketh": "^1.0.0",
-		"@dfinity/gix-components": "^4.0.0-next-2024-02-06.2",
-		"@dfinity/ledger-icp": "^2.1.2",
-		"@dfinity/ledger-icrc": "^2.1.1-next-2024-01-30.1",
+		"@dfinity/ckbtc": "^2.2.0",
+		"@dfinity/cketh": "^1.0.1",
+		"@dfinity/gix-components": "^4.1.0",
+		"@dfinity/ledger-icp": "^2.2.0",
+		"@dfinity/ledger-icrc": "^2.1.2-next-2024-02-19.3",
 		"@dfinity/principal": "^0.20.2",
-		"@dfinity/utils": "^2.1.0",
+		"@dfinity/utils": "^2.1.1",
 		"@metamask/detect-provider": "^2.0.0",
 		"@walletconnect/web3wallet": "^1.10.0",
 		"alchemy-sdk": "^3.1.2",
