--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"@dfinity/auth-client": "^1.0.1",
 		"@dfinity/candid": "^1.0.1",
 		"@dfinity/ckbtc": "^2.2.1",
-		"@dfinity/cketh": "^1.0.2",
+		"@dfinity/cketh": "^1.0.2-next-2024-02-26.1",
 		"@dfinity/gix-components": "^4.1.0",
 		"@dfinity/ledger-icp": "^2.2.1",
 		"@dfinity/ledger-icrc": "^2.1.3-next-2024-02-21",
