--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@dfinity/ckbtc": "^2.2.1-next-2024-02-28.2",
 		"@dfinity/cketh": "^1.0.2",
 		"@dfinity/gix-components": "^4.1.0",
+		"@dfinity/ic-management": "^2.2.2-next-2024-03-04.1",
 		"@dfinity/ledger-icp": "^2.2.1",
 		"@dfinity/ledger-icrc": "^2.1.3-next-2024-02-21",
 		"@dfinity/principal": "^1.0.1",
