--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"@dfinity/cketh": "^2.0.0",
 		"@dfinity/gix-components": "^4.1.0",
 		"@dfinity/ledger-icp": "^2.2.1",
-		"@dfinity/ledger-icrc": "^2.1.3-next-2024-02-21",
+		"@dfinity/ledger-icrc": "^2.2.0",
 		"@dfinity/principal": "^1.0.1",
 		"@dfinity/utils": "^2.1.2",
 		"@metamask/detect-provider": "^2.0.0",
