--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@dfinity/ckbtc": "^2.3.0-next-2024-03-18.1",
 		"@dfinity/cketh": "^2.0.0",
 		"@dfinity/gix-components": "^4.1.0",
+		"@dfinity/ic-management": "^3.0.0-next-2024-03-19",
 		"@dfinity/ledger-icp": "^2.2.1",
 		"@dfinity/ledger-icrc": "^2.2.0",
 		"@dfinity/principal": "^1.0.1",
