--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"build:compress": "./scripts/build.compress.sh",
 		"build:csp": "node scripts/build.csp.mjs",
 		"build:metadata": "node scripts/build.metadata.mjs",
-		"build:post-process": "npm run build:metadata && npm run build:csp && npm run build:compress",
+		"build:copy-workers": "node ./scripts/build.copy-workers.mjs",
+		"build:post-process": "npm run build:metadata && npm run build:csp && npm run build:copy-workers && npm run build:compress",
 		"dev": "vite dev",
 		"build": "tsc --noEmit && vite build && npm run build:post-process",
 		"preview": "vite preview",
@@ -38,6 +39,7 @@
 		"@dfinity/ledger-icrc": "^2.2.0",
 		"@dfinity/principal": "^1.0.1",
 		"@dfinity/utils": "^2.1.2",
+		"@junobuild/analytics": "^0.0.20",
 		"@metamask/detect-provider": "^2.0.0",
 		"@walletconnect/web3wallet": "^1.10.2",
 		"alchemy-sdk": "^3.2.0",
