--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
 		"@dfinity/agent": "^1.0.1",
 		"@dfinity/auth-client": "^1.0.1",
 		"@dfinity/candid": "^1.0.1",
-		"@dfinity/ckbtc": "^2.3.0-next-2024-03-18.1",
-		"@dfinity/cketh": "^2.0.0",
+		"@dfinity/ckbtc": "^2.3.1",
+		"@dfinity/cketh": "^2.0.1",
 		"@dfinity/gix-components": "^4.1.0",
-		"@dfinity/ic-management": "^3.0.0-next-2024-03-19",
-		"@dfinity/ledger-icp": "^2.2.1",
-		"@dfinity/ledger-icrc": "^2.2.0",
+		"@dfinity/ic-management": "^3.1.0",
+		"@dfinity/ledger-icp": "^2.2.2",
+		"@dfinity/ledger-icrc": "^2.2.1",
 		"@dfinity/principal": "^1.0.1",
-		"@dfinity/utils": "^2.1.2",
+		"@dfinity/utils": "^2.1.3",
 		"@junobuild/analytics": "^0.0.20",
 		"@metamask/detect-provider": "^2.0.0",
 		"@walletconnect/web3wallet": "^1.10.2",
