--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -5,6 +5,17 @@ on:
 
 jobs:
 
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Prepare
+        uses: ./.github/actions/prepare
+      - name: Build
+        run: npm run build
+
   lint:
     runs-on: ubuntu-latest
 
@@ -39,7 +50,7 @@ jobs:
         run: npm run test
 
   may-merge:
-    needs: ['check', 'lint', 'test']
+    needs: ['build', 'check', 'lint', 'test']
     runs-on: ubuntu-latest
     steps:
       - name: Cleared for merging
