--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"dotenv": "^16.4.5",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-local-rules": "^2.0.1",
 		"eslint-plugin-svelte": "^2.35.1",
 		"postcss": "^8.4.36",
 		"prettier": "^3.2.5",
