--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -22,3 +22,6 @@ getrandom = { version = "0.2", features = ["custom"] }
 ic-metrics-encoder = "1.1.0"
 serde_bytes = "0.11"
 shared = { path = "../shared" }
+
+[dev-dependencies]
+pocket-ic = "2.2.0"
