--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -33,8 +33,32 @@ jobs:
           name: ${{ matrix.name }}
           target: ${{ matrix.target }}
 
-  may-merge:
+  tests:
+    runs-on: ubuntu-latest
     needs: [ 'docker-build' ]
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-backend-tests-${{ hashFiles('Cargo.lock', 'rust-toolchain.toml') }}
+
+      - name: Download backend.wasm.gz
+        uses: actions/download-artifact@v4
+        with:
+          name: backend.wasm.gz
+          path: .
+
+      - name: "Run backend tests"
+        working-directory: .
+        run: ./scripts/test.backend.sh
+
+  may-merge:
+    needs: [ 'tests' ]
     runs-on: ubuntu-latest
     steps:
       - name: Cleared for merging
