--- a/.github/actions/docker-build-backend/action.yml
+++ b/.github/actions/docker-build-backend/action.yml
@@ -23,6 +23,7 @@ runs:
     - name: Build ${{ inputs.name }}
       uses: docker/build-push-action@v5
       with:
+        context: .
         file: Dockerfile
         cache-from: type=gha,scope=cached-stage
         # Exports the artefacts from the final stage
