--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ members = [
     "src/shared"
 ]
 resolver = "2"
+
+[workspace.dependencies]
+candid = "0.10.0"
+ic-cdk = "0.12.0"
+ic-cdk-macros = "0.8.1"
+serde = "1"
+serde_bytes = "0.11"
