--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -9,18 +9,18 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.10.0"
+candid.workspace = true
 ethers-core = "2"
 futures = "0.3"
-ic-cdk = "0.12.0"
-ic-cdk-macros = "0.8.1"
+ic-cdk.workspace = true
+ic-cdk-macros.workspace = true
 ic-stable-structures = "0.6.0"
-serde = "1"
+serde.workspace = true
 k256 = "0.13"
 hex = "0.4"
 getrandom = { version = "0.2", features = ["custom"] }
 ic-metrics-encoder = "1.1.0"
-serde_bytes = "0.11"
+serde_bytes.workspace = true
 shared = { path = "../shared" }
 
 [dev-dependencies]
