--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"cargo:test": "./scripts/test.backend.sh",
 		"lint": "prettier --check './**/*.{ts,js,mjs,json,scss,css,svelte,html,md}' && eslint .",
 		"format": "prettier --write './**/*.{ts,js,mjs,json,scss,css,svelte,html,md}'",
-		"generate": "scripts/did.sh && dfx generate && node scripts/update.types.mjs && npm run format",
+		"generate": "scripts/did.sh && dfx generate && node scripts/did.update.types.mjs && node scripts/did.delete.types.mjs && npm run format",
 		"deploy": "scripts/deploy.sh",
 		"i18n": "node scripts/i18n.mjs && prettier --write ./src/frontend/src/lib/types/i18n.d.ts"
 	},
