--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
 		"build:metadata": "node scripts/build.metadata.mjs",
 		"build:copy-workers": "node ./scripts/build.copy-workers.mjs",
 		"build:post-process": "npm run build:metadata && npm run build:csp && npm run build:copy-workers && npm run build:compress",
+		"build:snses": "node scripts/build.snses.mjs",
 		"dev": "vite dev",
-		"build": "tsc --noEmit && vite build && npm run build:post-process",
+		"build": "npm run build:snses && tsc --noEmit && vite build && npm run build:post-process",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
