--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,5 @@ backend.wasm.gz
 backend-v*.wasm.gz
 
 # snses
-src/frontend/src/icp/data/**/*
+src/frontend/src/env/tokens.sns.json
 src/frontend/static/icons/**/*
