--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"build:post-process": "npm run build:metadata && npm run build:csp && npm run build:copy-workers && npm run build:compress",
 		"build:sns-tokens": "node scripts/build.sns.tokens.mjs",
 		"dev": "vite dev",
-		"build": "npm run build:sns-tokens && tsc --noEmit && vite build && npm run build:post-process",
+		"build": "tsc --noEmit && vite build && npm run build:post-process",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
