--- a/.github/workflows/update-sns-tokens.yml
+++ b/.github/workflows/update-sns-tokens.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.GIX_BOT_PAT }}
+          token: ${{ secrets.GIX_CREATE_PR_PAT }}
           base: main
           add-paths: |
             src/frontend/src/env/tokens.sns.json
