--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ resolver = "2"
 candid = "0.10.0"
 ic-cdk = "0.12.0"
 ic-cdk-macros = "0.8.1"
+phantom_newtype = "0.2.0"
 serde = "1"
 serde_bytes = "0.11"
