--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@dfinity/identity-secp256k1": "^1.2.0",
 		"@rollup/plugin-inject": "^5.0.5",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.5.5",
@@ -65,6 +66,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-local-rules": "^2.0.1",
 		"eslint-plugin-svelte": "^2.35.1",
+		"pem-file": "^1.0.1",
 		"postcss": "^8.4.38",
 		"prettier": "^3.2.5",
 		"prettier-plugin-organize-imports": "^3.2.4",
