build: gix-cmp was released

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"@dfinity/candid": "^1.0.1",
 		"@dfinity/ckbtc": "^2.3.1",
 		"@dfinity/cketh": "^2.0.1",
-		"@dfinity/gix-components": "^4.1.0-next-2024-04-17",
+		"@dfinity/gix-components": "^4.2.0",
 		"@dfinity/ic-management": "^3.1.1",
 		"@dfinity/ledger-icp": "^2.2.2",
 		"@dfinity/ledger-icrc": "^2.2.1",
