feat: update oneliner and description

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ VITE_INFURA_API_KEY=
 VITE_ALCHEMY_API_KEY=
 VITE_WALLET_CONNECT_PROJECT_ID=
 VITE_OISY_NAME="Oisy Wallet"
-VITE_OISY_ONELINER="A novel Ethereum wallet hosted on the Internet Computer"
-VITE_OISY_DESCRIPTION="Crafted for the Internet Computer, Oisy is a unique Ethereum wallet that operates directly within your browser. It is entirely on-chain and secured by chain-key cryptography and Internet Identity."
+VITE_OISY_ONELINER="A multi-chain wallet powered by chainfusion"
+VITE_OISY_DESCRIPTION="Oisy Wallet provides a seamless on-chain experience to manage your Ethereum and ICP assets. By leveraging native web technologies and advanced cryptography, it eliminates the need for browser extensions or mobile apps. And accessing the wallet is easy using passkeys on a computer or mobile device."
 VITE_OISY_URL=https://oisy.com
 VITE_OISY_ICON=https://oisy.com/favicons/icon-512x512.png
 VITE_OISY_REPO_URL=https://github.com/dfinity/oisy-wallet
