--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
 		"i18n": "node scripts/i18n.mjs && prettier --write ./src/frontend/src/lib/types/i18n.d.ts"
 	},
 	"dependencies": {
-		"@dfinity/agent": "^1.0.1",
-		"@dfinity/auth-client": "^1.0.1",
-		"@dfinity/candid": "^1.0.1",
-		"@dfinity/ckbtc": "^2.3.1",
-		"@dfinity/cketh": "^2.0.1-next-2024-04-23",
+		"@dfinity/agent": "^1.2.1",
+		"@dfinity/auth-client": "^1.2.1",
+		"@dfinity/candid": "^1.2.1",
+		"@dfinity/ckbtc": "^2.3.2",
+		"@dfinity/cketh": "^3.0.0",
 		"@dfinity/gix-components": "^4.2.0",
-		"@dfinity/ic-management": "^3.1.1",
-		"@dfinity/ledger-icp": "^2.2.2",
-		"@dfinity/ledger-icrc": "^2.2.1",
-		"@dfinity/principal": "^1.0.1",
-		"@dfinity/utils": "^2.1.3",
+		"@dfinity/ic-management": "^3.2.0",
+		"@dfinity/ledger-icp": "^2.2.3",
+		"@dfinity/ledger-icrc": "^2.3.0",
+		"@dfinity/principal": "^1.2.1",
+		"@dfinity/utils": "^2.2.0",
 		"@junobuild/analytics": "^0.0.21",
 		"@metamask/detect-provider": "^2.0.0",
 		"@walletconnect/web3wallet": "^1.11.1",
@@ -52,7 +52,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@dfinity/identity-secp256k1": "^1.2.0",
+		"@dfinity/identity-secp256k1": "^1.2.1",
 		"@rollup/plugin-inject": "^5.0.5",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.5.5",
