--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.5.5",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
+		"@testing-library/jest-dom": "^6.4.5",
+		"@testing-library/svelte": "^5.1.0",
 		"@types/node": "^20.12.5",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
@@ -66,6 +68,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-local-rules": "^2.0.1",
 		"eslint-plugin-svelte": "^2.35.1",
+		"jsdom": "^24.0.0",
 		"pem-file": "^1.0.1",
 		"postcss": "^8.4.38",
 		"prettier": "^3.2.5",
